--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,13 @@ h1 {
 }
 
 /***********Class Selectors***********/
+.container-fluid {
+  padding: 3% 15%;
+}
 
+.navbar-brand {
+  margin-left: 16px;
+}
 /***********ID Selectors***********/
 #title {
   background-color: #ff4c68;
