added carousel for feedback and cards for pricing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,120 @@
 /***********Tag Selectors***********/
 body {
-  font-family: "Montserrat-Black", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
-  font-size: 3rem;
+  font-family: "Montserrat-Black", sans-serif;
+  font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
 }
 
+h2 {
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+h3 {
+  font-weight: Bold;
+  font-size: 1.5rem;
+}
 /***********Class Selectors***********/
 .container-fluid {
   padding: 3% 15%;
 }
 
-.first-col {
-  margin-top: 100px;
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
 }
 
+/* Navigation bar  */
+.navbar {
+  padding: 0 0 4.5rem;
+}
 .navbar-brand {
   font-family: "Ubuntu", sans-serif;
   font-size: 2.5rem;
-  font-weight: 700;
+  font-weight: bold;
   margin-left: 16px;
 }
 
-.title-image {
-  transform: rotate(25deg);
-  width: 70%;
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat", sans-serif;
+}
+
+.feature-box {
+  padding: 5%;
+}
+/* Download Buttons */
+.download-btn {
+  margin: 5% 3% 5% 0;
+}
+
+/* Font Awesome Colour */
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+/* Feature Blurb Text */
+.feature-blurb {
+  color: #8f8f8f;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+/* press logo */
+.press-logo {
+  width: 15%;
+  margin: 20px;
+}
+
+/* limiting padding to just the carousel items */
+.carousel-item {
+  padding: 7% 15%;
 }
 /***********ID Selectors***********/
+/* Title section */
 #title {
   background-color: #ff4c68;
   color: white;
+}
+
+/* Features Section  */
+#features {
+  padding: 7% 15%;
+  text-align: center;
+}
+
+/* Testimonials Section */
+#testimonials {
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+/* Press section  */
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+/* Pricing section */
+#pricing {
+  text-align: center;
 }
