--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,62 @@
-/***********Tag Selectors***********/
 body {
   font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+/* Headings */
+.big-heading {
   font-family: "Montserrat-Black", sans-serif;
   font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
 }
 
-h2 {
-  font-weight: bold;
+.section-heading {
   font-size: 3rem;
   line-height: 1.5;
 }
-h3 {
-  font-family: "Montserrat-Black", sans-serif;
-  font-weight: Bold;
-  font-size: 1.5rem;
-}
-/***********Class Selectors***********/
+
+/* Containers */
 .container-fluid {
-  padding: 3% 15% 10%;
+  padding: 7% 15%;
 }
 
+/* Sections */
+.coloured-section {
+  background-color: #ff4c68;
+  color: white;
+}
+.white-section {
+  background-color: #fff;
+}
+/* Download Buttons */
+.download-btn {
+  margin: 5% 3% 5% 0;
+}
+/* Title Section */
+
+#title .container-fluid {
+  padding-top: 3%;
+  text-align: left;
+}
 .title-image-box {
   position: relative;
   margin: 0;
 }
+
 .title-image {
   width: 60%;
   transform: rotate(25deg);
@@ -44,7 +72,7 @@ h3 {
   font-family: "Ubuntu", sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
-  margin-left: 16px;
+  margin-left: 0px;
 }
 
 .nav-item {
@@ -56,12 +84,17 @@ h3 {
   font-family: "Montserrat", sans-serif;
 }
 
+/* Features Section  */
+#features {
+  position: relative;
+}
+
 .feature-box {
   padding: 5%;
 }
-/* Download Buttons */
-.download-btn {
-  margin: 5% 3% 5% 0;
+
+.feature-title {
+  font-size: 1.5rem;
 }
 
 /* Font Awesome Colour */
@@ -73,9 +106,16 @@ h3 {
 .icon:hover {
   color: #ff4c68;
 }
-/* Feature Blurb Text */
-.feature-blurb {
-  color: #8f8f8f;
+
+/* Testimonials Section */
+#testimonials,
+#press {
+  background-color: #ef8172;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -84,97 +124,53 @@ h3 {
   margin: 20px;
 }
 
+/* Press section  */
+#press {
+  padding-bottom: 3%;
+}
+
 /* press logo */
 .press-logo {
   width: 15%;
   margin: 20px;
 }
 
-/* limiting padding to just the carousel items */
-.carousel-item {
-  padding: 7% 15%;
+/* Pricing section */
+#pricing {
+  padding: 100px;
 }
 
 /* Styling the pricing column */
 .pricing-column {
   padding: 3% 2%;
 }
+.doge {
+  font-size: 1.5rem;
+}
 
-/* cta styling */
-.cta-blurb {
-  font-size: 3.5rem;
-  font-weight: 900;
+.price-text {
+  font-size: 3rem;
   line-height: 1.5;
 }
 
+/* Footer Section */
 /* footer elements styling */
 .icon-footer {
   margin: 20px 10px;
 }
-/***********ID Selectors***********/
-/* Title section */
-#title {
-  background-color: #ff4c68;
-  color: white;
-}
 
-/* Features Section  */
-#features {
-  padding: 7% 15% 2%;
-  background-color: #fff;
-  text-align: center;
-  position: relative;
-}
-
-/* Testimonials Section */
-#testimonials {
-  text-align: center;
-  background-color: #ef8172;
-  color: #fff;
-}
-
-/* Press section  */
-#press {
-  background-color: #ef8172;
-  text-align: center;
-  padding-bottom: 3%;
-}
-
-/* Pricing section */
-#pricing {
-  padding: 100px;
-  text-align: center;
-}
-
-/* Call to Action (cta) section */
-#cta {
-  color: white;
-  background-color: #ff4c68;
-  padding: 7% 15%;
-  text-align: center;
-}
-
-/* Footer Section */
-#footer {
-  background-color: #fff;
-  text-align: center;
-  padding: 7% 15%;
-}
 /* Media Query for Screen Resizing */
 @media (max-width: 1028px) {
   .title-image-box {
     position: static;
   }
-
   .title-image {
     transform: rotate(0);
     position: static;
   }
-
   #features {
     position: static;
   }
-
   #title {
     text-align: center;
   }
